# pinta

./: .ansible-lint.yml  .editorconfig  .env.e2e  .env.example  .gitattributes  .gitignore  .mit-copyright.txt  .pre-commit-config.yaml  .yamllint  CHANGELOG.md  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  whitelist.txt
.devcontainer/: Containerfile  README.md  docker-compose.devcontainer.yml  setup_venv.sh
.devcontainer/wsl/: devcontainer.json  docker-compose.devcontainer.yml
.devcontainer/x11/: devcontainer.json  docker-compose.devcontainer.yml
.github/workflows/: PULL_REQUEST_TEMPLATE.md  dags.yml  db.yml  e2e.yml  integration-tests.yml  prek.yml  processing.yml  qgis_plugin.yml  release.yml  unit-tests.yml
components/common_test_utils/: README.md  pyproject.toml
components/common_test_utils/src/pinta_test_utils/: db_utils.py  xdist_utils.py
components/dags/: README.md  pyproject.toml  setup_local_airflow.sh
components/dags/src/pinta_dags/: __init__.py  config.py
components/dags/src/pinta_dags/dags/: print_hello_world.py
components/dags/test/: conftest.py
components/dags/test/dags/: test_print_hello_world.py
components/dags/test_dags/: README.md  conftest.py
components/dags/test_dags/dags/: test_print_hello_world.py
components/db/: .pre-commit-config.yaml  README.md  alembic.ini  pyproject.toml
components/db/migrations/: env.py  script.py.mako
components/db/migrations/versions/: 001_add_production_area_and_point_cloud_.py  001_temp_migration.py
components/db/src/pinta_db/: constants.py  env.py  exceptions.py  schemas.py
components/db/src/pinta_db/models/: all.py  base.py  management.py  temp_model.py
components/db/src/pinta_db/utils/: model_utils.py
components/db/src/pinta_db_test_utils/: db_utils.py
components/db/src/pinta_db_utils/: alembic_helpers.py  engine_utils.py  model_utils.py  schema_utils.py
components/db/src/pinta_db_utils/postgis/: raster.py
components/db/test/: conftest.py  test_alembic_helpers.py  test_placeholder.py
components/db/test_db/: conftest.py  test_alembic_helpers.py  test_model_utils.py
components/db/test_integration/: conftest.py  test_management.py  test_placeholder.py
components/db/test_integration/postgis/: test_raster.py
components/db/test_integration_db/: conftest.py  test_management.py
components/e2e/: Containerfile  README.md  entrypoint.sh  pyproject.toml
components/e2e/src/pinta_e2e_utils/: constants.py
components/e2e/test/: conftest.py
components/e2e/test_e2e/: __init__.py  conftest.py  test_placeholder.py
components/lib/: pyproject.toml
components/lib/src/pinta_test_utils/: pinta_utils.py  xdist_utils.py
components/processing/: Containerfile  README.md  entrypoint.sh  pyproject.toml
components/processing/src/pinta_processing/: __init__.py  core.py  exceptions.py  main.py  pipelines.py
components/processing/src/pinta_processing/filter/: __init__.py
components/processing/src/pinta_processing/filters/: __init__.py  multiply.py  overview.py
components/processing/src/pinta_processing/reader/: __init__.py  readers.py
components/processing/src/pinta_processing/scripts/: hello_world.py  process_metadata.py
components/processing/src/pinta_processing/utils/: logging.py
components/processing/src/pinta_processing/writer/: __init__.py  geotiff.py  postgis.py
components/processing/src/pinta_processing_test_utils/: constants.py
components/processing/test/: conftest.py  test_placeholder.py
components/processing/test/pinta_processing/: test_core.py
components/processing/test/pinta_processing/filter/: test_multiply.py  test_overview.py
components/processing/test/pinta_processing/reader/: test_geotif.py
components/processing/test/pinta_processing/scripts/: test_process_metadata.py
components/processing/test/pinta_processing/writer/: test_geotif.py
components/processing/test_integration/: conftest.py  test_store_metadata.py
components/processing/test_integration/pipelines/: test_rasterio_to_geotiff_pipeline.py  test_rasterio_to_postgis_pipeline.py
components/processing/test_integration_processing/: test_store_metadata.py
components/processing/test_integration_processing/pipelines/: test_rasterio_to_geotiff_pipeline.py
components/processing/test_processing/: conftest.py
components/processing/test_processing/pinta_processing/: test_core.py
components/processing/test_processing/pinta_processing/scripts/: test_process_metadata.py
components/qgis_plugin/: .env.example  .pre-commit-config.yaml  README.md  compile_translations.sh  copyright-header.txt  metadata.txt  pyproject.toml  update_translations.sh
components/qgis_plugin/src/pinta_qgis_plugin/: __init__.py  env.py  exceptions.py  plugin.py
components/qgis_plugin/src/pinta_qgis_plugin/layers/: config.py  database.py  manager.py
components/qgis_plugin/src/pinta_qgis_plugin/resources/i18n/: fi.qm  fi.ts
components/qgis_plugin/src/pinta_qgis_plugin/utils/: i18n_utils.py
components/qgis_plugin/test/: test_placeholder.py
components/qgis_plugin/test/layers/: __init__.py  test_manager.py
infra/ansible/: ansible.cfg  database.yml  full.yml
infra/ansible/inventories/local/: hosts.yml
infra/ansible/roles/db_init/defaults/: main.yml
infra/ansible/roles/db_init/tasks/: main.yml
infra/ansible/roles/db_migrations/defaults/: main.yml
infra/ansible/roles/db_migrations/tasks/: main.yml
infra/ansible/roles/install_component/defaults/: main.yml
infra/ansible/roles/install_component/tasks/: main.yml
infra/containers/ansible/: Containerfile
infra/containers/postgis/: 01-cluster-requested.sh  02-cluster-received.sh  Containerfile
infra/containers/server/: Containerfile
test_data/2025/production_area_1/: T5124H1_4.laz  T5124H1_6.laz  T5124H1_7.laz  T5124H1_9.laz  T5124H3_3.laz  T5124H3_7.laz  T5124H3_8.laz
test_data/point_clouds/2025/production_area_1/: T5124H1_1.laz  T5124H1_2.laz  T5124H1_3.laz  T5124H1_5.laz  T5124H1_8.laz  T5124H3_1.laz  T5124H3_2.laz  T5124H3_4.laz  T5124H3_5.laz  T5124H3_6.laz  T5124H3_9.laz
test_data/processing/: dem.tif
