[project]
name = "pinta"
version = "0.0.1"
requires-python = ">=3.12"
dependencies = []

[tool.uv]
default-groups = ["lint"]
package = false

[tool.uv.workspace]

members = ["components/*"]
# QGIS plugins have separate venvs created with --system-site-packages
exclude = ["components/qgis_plugin"]

[dependency-groups]
lint = [
  "prek==0.3.5",
]

[tool.pytest.ini_options]
addopts = "--import-mode=importlib"
