[project]
name = "pinta"
version = "0.0.1"
requires-python = ">=3.12"
dependencies = []

[tool.uv]
package = false
conflicts = [
  [
    { package = "pinta-qgis-plugin", extra = "qgis" },
    { package = "pinta-db", extra = "shapely" },
  ],
  [
    { package = "pinta-qgis-plugin", extra = "qgis" },
    { package = "pinta-dags", extra = "airflow" },
  ],
]
default-groups = ["lint"]

[tool.uv.workspace]
members = ["components/*"]

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
publish-url = "https://upload.pypi.org/legacy/"
default = true

[[tool.uv.index]]
name = "testpypi"
url = "https://test.pypi.org/simple/"
publish-url = "https://test.pypi.org/legacy/"
explicit = true

[dependency-groups]
dev = [
  "pytest-xdist>=3.8.0",
]
lint = [
  "flake8>=7.3.0",
  "flake8-pyproject>=1.2.4",
  "flake8-spellcheck>=0.28.0",
  "prek>=0.3.5",
  "ruff>=0.15.5",
  "mypy>=1.19.1",
]

[tool.flake8]
spellcheck-targets = "names"
dictionaries = "en_US,python,technical"
select = ["SC"]
extend-exclude = ".venv"
per-file-ignores = [
  "**/test_*/*:SC200",
]


[tool.ruff]
target-version = "py312"
line-length = 88

lint.ignore = [
  "FIX",   # flake8-fixme
  "TD002", # Missing author in TODO
  "TD003", # Missing TODO link
  "CPY",   # flake8-copyright (CPY)
  "D104",  # Missing docstring in public package
  "D105",  # Missing docstring in magic method
  "D107",  # Missing docstring in `__init__`
  "D417",  # Missing argument description
  # Conflicting rules (formatter)
  "D203",   # one-blank-line-before-class, D211 used (no-blank-line-before-class)
  "D213",   # multi-line-summary-second-line, D212 used (multi-line-summary-first-line)
  "COM812", # missing-trailing-comma (formatter will enforce this)
  "ISC001", # single-line-implicit-string-concatenation,
  "EXE002", # The file is executable but no shebang is present
  "D100",   # docstring in public module
  "EM102",  # f-string-in-exception
]

# List of all rules https://docs.astral.sh/ruff/rules/
lint.select = [
  "ALL",
]

# Avoiding flagging (and removing) `SC200` from any `# noqa`
# directives, despite Ruff's lack of support for `flake8-spellcheck`.
lint.external = ["SC200"]

lint.unfixable = [
  "F401", # Unused imports
  "F841", # Unused variables
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "all"
banned-module-level-imports = ["pinta"]


[tool.ruff.lint.per-file-ignores]
"*/exceptions.py" = [
  "D", # pydocstyle
]
"*/test_*/*" = [
  "INP001",
  "D",       # pydocstyle
  "DTZ",     # flake8-datetimez
  "FBT",     # flake8-boolean-trap
  "TD",      # flake8-todos
  "S",       # flake8-bandit
  "SLF",     # flake8-self
  "ANN401",  # Dynamically typed expressions (typing.Any) are disallowed
  "ANN201",  # Missing return type annotation for public function
  "E501",    # Line too long
  "PLR2004", # Magic value used in comparison, consider replacing `2000` with a constant variable
  "PLR0913", # Too many arguments in function definition
  "ARG001",  # Unused function argument
  "AIR002",  # @dag should have an explicit `schedule` argument
]
"**/conftest.py" = [
  "PLC0415", # `import` should be at the top-level of a file
]
"*/pinta_test_utils/*" = [
  "INP001",
  "D",       # pydocstyle
  "DTZ",     # flake8-datetimez
  "FBT",     # flake8-boolean-trap
  "TD",      # flake8-todos
  "S",       # flake8-bandit
  "SLF",     # flake8-self
  "ANN201",  # Missing return type annotation for public function
  "E501",    # Line too long
  "PLR2004", # Magic value used in comparison, consider replacing `2000` with a constant variable
  "PLR0913", # Too many arguments in function definition
  "ARG001",  # Unused function argument
  "AIR002",  # @dag should have an explicit `schedule` argument
]
"!**/pinta_dags/**/*.py" = [
  # ignore banned top level import except for dag modules, since config
  # is always read from root toml and cannot easily extend this for subdirs
  "TID253", # banned-module-level-imports
]
"!**/pinta_dags/dags/**/*.py" = [
  # ignore banned logging import except for dag modules, since config
  # is always read from root toml and cannot easily extend this for subdirs
  "TID251", # banned-api
]
"*/dags/*" = [
  "PLC0415", # `import` should be at the top-level of a file
  "D103",    # Missing docstring in public function
]
"*/dag_utils/*" = [
  "PLC0415", # `import` should be at the top-level of a file
]
"infra/ansible/**/*.py" = [
  # Ignore all rules from ansible filter plugins for now
  "ALL",
]

[tool.mypy]
python_version = "3.12"
follow_imports = "normal"
show_column_numbers = true
namespace_packages = true
ignore_missing_imports = true
exclude = "^test"


[tool.pytest.ini_options]
addopts = "-n auto --import-mode=importlib"
