[project]
name = "pinta-db"
version = "0.0.0"
description = "Database component of the elevation production system"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
  "geoalchemy2>=0.18.4",
  "sqlmodel>=0.0.37",
]

[project.optional-dependencies]
migrations = [
  "alembic>=1.18.4",
]
shapely = [
  "geoalchemy2[shapely]",
  "numpy>=2",
]

[tool.uv]
default-groups = ["dev", "lint"]

[dependency-groups]
dev = [
  "dotenv>=0.9.9",
  "psycopg[binary]>=3.3.3",
  "pytest-dotenv>=0.5.2",
  "pytest-xdist>=3.8.0",
  "pinta-lib",
  "pytest-mock>=3.15.1",
]
lint = [
  "prek",
  "mypy",
  "ruff",
]

[tool.uv.sources]
pinta-lib = { workspace = true }

[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "pinta_db"
include = ["py.typed"]

[tool.ruff]
# Extend the root `pyproject.toml`
extend = "../../pyproject.toml"

[tool.ruff.lint.extend-per-file-ignores]
"*/versions/*" = [
  "D", # pydocstyle

]

[tool.pytest.ini_options]
addopts = "--import-mode=importlib -n auto"

[tool.mypy]
python_version = "3.12"
follow_imports = "normal"
show_column_numbers = true
namespace_packages = true
ignore_missing_imports = true
exclude = "^test"


[[tool.mypy.overrides]]
module = "src.pinta_db.models.*"
disable_error_code = ["call-arg"]
