[project]
name = "pinta-db"
version = "0.0.0"
description = "Database component of the elevation production system"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
  "geoalchemy2>=0.18.4",
  "sqlmodel>=0.0.37",
]

[project.optional-dependencies]
migrations = [
  "alembic>=1.18.4",
]
shapely = [
  "geoalchemy2[shapely]",
  "numpy>=2",
]
build = ["uv"]

[project.urls]
Homepage = "https://github.com/nlsfi/pinta"
Repository = "https://github.com/nlsfi/pinta"
Changelog = "https://github.com/nlsfi/pinta/blob/main/db/processing/CHANGELOG.md/"


[tool.uv]
default-groups = ["dev", "lint"]

[dependency-groups]
dev = [
  "dotenv>=0.9.9",
  "psycopg[binary]>=3.3.3",
  "pytest-dotenv>=0.5.2",
  "pytest-xdist>=3.8.0",
  "pinta-lib",
  "pytest-mock>=3.15.1",
]
lint = [
  "prek",
  "mypy",
  "ruff",
]

[tool.uv.sources]
pinta-lib = { workspace = true }

[build-system]
requires = ["uv_build>=0.10.9,<0.12.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "pinta_db"
include = ["py.typed"]

[tool.ruff]
# Extend the root `pyproject.toml`
extend = "../../pyproject.toml"

[tool.ruff.lint.extend-per-file-ignores]
"*/versions/*" = [
  "D", # pydocstyle

]

[tool.pytest.ini_options]
addopts = "--import-mode=importlib -n auto"

[tool.mypy]
python_version = "3.12"
follow_imports = "normal"
show_column_numbers = true
namespace_packages = true
ignore_missing_imports = true
exclude = "^test"


[[tool.mypy.overrides]]
module = "src.pinta_db.models.*"
disable_error_code = ["call-arg"]

[tool.semantic_release]
commit_parser = "conventional-monorepo"
major_on_zero = false
allow_zero_version = true
commit_message = """\
chore(release): pinta-db@{version}

Automatically generated by python-semantic-release
"""
tag_format = "pinta-db-v{version}"
version_toml = ["pyproject.toml:project.version"]
build_command = """
    python -m pip install -e '.[build]'
    rm -f dist
    mkdir -p dist
    uv lock --upgrade-package "$PACKAGE_NAME"
    git add ../../uv.lock
    uv build
    mv ../../dist/pinta_db* dist/
"""

[tool.semantic_release.commit_parser_options]
path_filters = ["."]
scope_prefix = "db"

[tool.semantic_release.changelog]
# Recommended patterns for conventional commits parser that is scope aware
exclude_commit_patterns = [
  '''chore(?:\([^)]*?\))?: .+''',
  '''ci(?:\([^)]*?\))?: .+''',
  '''refactor(?:\([^)]*?\))?: .+''',
  '''style(?:\([^)]*?\))?: .+''',
  '''test(?:\([^)]*?\))?: .+''',
  '''build\((?!deps\): .+)''',
  '''Initial [Cc]ommit.*''',
]

[tool.semantic_release.branches.main]
match = "(main|master|release-pipelines)" # TODO: remove this branch name
prerelease_token = "dev"
