[project]
name = "pinta-lib"
version = "0.0.0"
description = "Common library for the project"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
]

[tool.uv]
default-groups = ["dev", "lint"]

[dependency-groups]
dev = [
  "pytest>=9.0.2",
]
lint = [
  "prek",
  "mypy",
  "ruff",
]

[build-system]
requires = ["setuptools>=82", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
pinte_test_utils = ["py.typed"]
