[project]
name = "pinta-lib"
version = "0.0.0"
description = "Common library for the project"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
]

[tool.uv]
default-groups = ["dev", "lint"]

[dependency-groups]
dev = [
  "pytest>=9.0.2",
]
lint = [
  "prek",
  "mypy",
  "ruff",
]

[build-system]
requires = ["uv_build>=0.11.1,<0.12.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "pinta_test_utils"
include = ["py.typed"]

# TODO: add python semantic release config when this component has other than dev related utils
