[project]
name = "pinta_processing"
# Version can't be dynamic as docker build layer caching breaks
version = "0.0.0"
requires-python = ">=3.12"
dependencies = [
  "laspy",
  "lazrs",
  "pinta-db[shapely]",
]

[tool.uv]
default-groups = ["development", "linting"]

[dependency-groups]
development = [
  # testing
  "pytest",
  "pytest-mock",
  "pytest-dotenv",
  "pinta-lib",
]
linting = [
  "prek",
  "mypy",
  "ruff",
]

[tool.uv.sources]
pinta-db = { workspace = true }
pinta-lib = { workspace = true }

[build-system]
requires = ["setuptools>=82", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
pinte_test_utils = ["py.typed"]

# extend required for isort action to pick up correct config
[tool.ruff]
extend = "../../pyproject.toml"
