[project]
name = "pinta-processing"
# Version can't be dynamic as docker build layer caching breaks
version = "0.0.0"
requires-python = ">=3.12"
dependencies = [
  "laspy",
  "lazrs",
  "pinta-db[shapely]",
]

[tool.uv]
default-groups = ["development", "linting"]

[dependency-groups]
development = [
  # testing
  "pytest",
  "pytest-mock",
  "pytest-dotenv",
  "pinta-lib",
]
linting = [
  "prek",
  "mypy",
  "ruff",
]

[tool.uv.sources]
pinta-db = { workspace = true }
pinta-lib = { workspace = true }

[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "pinta_processing"
include = ["py.typed"]

# extend required for isort action to pick up correct config
[tool.ruff]
extend = "../../pyproject.toml"
