[project]
name = "pinta-qgis-plugin"
requires-python = ">=3.12"
version = "0.0.0"
dependencies = [
  "pinta-db",
  "qgis_plugin_tools",
]

[project.optional-dependencies]
# QGIS requirements are marked here to allow starting QGIS from venv without conflicting dependencies
qgis = [
  # "GDAL==3.8.4", # Cannot be installed via pip
  "numpy>=1, <2",
  # "matplotlib==3.6.3", # Slow to install, uncomment if we really need this...
  "OWSLib==0.29.3",
  "psycopg2-binary>=2, <3",
  "requests>=2, <3",
]

[build-system]
requires = ["uv_build>=0.10.9,<0.11.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "pinta_qgis_plugin"
include = [
  "py.typed",
  "metadata.txt",
  "resources/**/*",
  "**/*.svg",
  "**/*.ts",
  "**/*.ui",
  ".BUILD",
]

[tool.uv]
default-groups = ["dev", "lint"]

[tool.uv.sources]
pinta-db = { workspace = true }

[dependency-groups]
dev = [
  "qgis-plugin-dev-tools>=0.11.0",
  # testing
  "pytest",
  "pytest-qt",
  "pytest-mock",
  "pytest-qgis",
  "pytest-timeout",
  "pytest-dotenv",
  "coverage[toml]",
  "coverage-enable-subprocess",
  # pytest-qt<4 depends on py implicitly provided by pytest<7, require manually
  "py",
  "pydevd-pycharm~=253.31033.139", # debugger for jetbrains ides
  "debugpy>=1.8.20",               # debugger for VSCode
]
lint = [
  # linting tools
  "prek",
  "mypy",
  "ruff",
  # flake8 plugins
  "flake8-qgis",
  # stubs for type checks
  "PyQt5-stubs",
  "types-requests",
]

[tool.flake8]
select = [
  "QGS",
]


[tool.pytest.ini_options]
minversion = "7.0"
testpaths = [
  "test",
]
addopts = "--import-mode=importlib"

[tool.coverage.paths]
source = ["src", "**/site-packages"]

[tool.coverage.run]
source_pkgs = ["pinta_qgis_plugin"]
# generate distinct coverage files with relative paths
parallel = true
relative_files = false
# TODO: set branch=true and remove core="sysmon" when python 3.14
# is used (coverage will use sysmon by default)
branch = false
core = "sysmon"

[tool.coverage.report]
exclude_lines = [
  "pragma: no cover",
  "def __repr__",
  "if TYPE_CHECKING:",
  "raise NotImplementedError",
]

# extend required for isort action to pick up correct config
[tool.ruff]
extend = "../../pyproject.toml"

[tool.qgis_plugin_dev_tools]
plugin_package_name = "pinta_qgis_plugin"
version_number_source = "distribution"
changelog_file_path = "../../CHANGELOG.md"
env_file_path = "../../.env"
runtime_requires = [
  "qgis_plugin_tools",
]
auto_add_recursive_runtime_dependencies = false
translation_language_codes = [
  "fi",
]
translation_search_paths = [
  "src/pinta_qgis_plugin",
]
translation_destination_path = "src/pinta_qgis_plugin/resources/i18n"
